исправлен "Шаблон класса "Матрицы".md"
опечатки + нумерация списка источников

--- a/Шаблон класса "Матрицы".md
+++ b/Шаблон класса "Матрицы".md
@@ -9,8 +9,8 @@
 
 Реализовано было все, кроме Perfect Forwarding, в том числе копиконструктор. Функции в коде подписаны.
 
-Интересным представляется момент с перегрузкой оператора [] – задача была в том, чтобы запись "test[1][1]" нормально воспринималась компилятором (так же, как и для двумерных массивов. Для этого пришлось вводить новый класс Iterator как промежуточное возвращаемое значение после обработки одних квадратных скобок и определять метод [] для него.
+Интересным представляется момент с перегрузкой оператора [] – задача была в том, чтобы запись "test[1][1]" нормально воспринималась компилятором (так же, как и для двумерных массивов). Для этого пришлось вводить новый класс Iterator как промежуточное возвращаемое значение после обработки одних квадратных скобок и определить метод [] для него.
 
 Источники:
-"Просто о шаблонах C++": https://habr.com/ru/post/599801/
-"Идеальная передача и универсальные ссылки в C++" (Perfect Forwarding): https://habr.com/ru/post/242639/
+1. "Просто о шаблонах C++": https://habr.com/ru/post/599801/
+2. "Идеальная передача и универсальные ссылки в C++" (Perfect Forwarding): https://habr.com/ru/post/242639/
