--- a/Шаблон класса "Матрицы".md
+++ b/Шаблон класса "Матрицы".md
@@ -1,11 +1,11 @@
-Шаблон класса "Матрицы".
+Шаблон класса "Матрицы"
 
 Требования, которые нужно было соблюсти:
-1.1 Реализация матриц через шаблоны (любой тип данных в ячейках)
-1.2 Реализация перегрузки оператора [] - вызов элемента матрицы как элемента базового двумерного массива
-2.1 Реализация перегрузки операторов "==" (равенства), сложения (матрица + матрица) и умножения на число (можно только на 1 тип, разницы между int и float не особо много)
-2.2 Реализация перегрузки оператора умножения матрицы на матрицу
-3.1 Реализация перегрузки оператора "=" (присваивание - т.н. "Perfect Forwarding", об этом позже. Пока можно поискать, что такое копи-конструктор)
+1. Реализация матриц через шаблоны (любой тип данных в ячейках)
+2. Реализация перегрузки оператора [] - вызов элемента матрицы как элемента базового двумерного массива
+3. Реализация перегрузки операторов "==" (равенства), сложения (матрица + матрица) и умножения на число (можно только на 1 тип, разницы между int и float не особо много)
+4. Реализация перегрузки оператора умножения матрицы на матрицу
+5. Реализация перегрузки оператора "=" (присваивание - т.н. "Perfect Forwarding", об этом позже. Пока можно поискать, что такое копи-конструктор)
 
 Реализовано было все, кроме Perfect Forwarding, в том числе копиконструктор. Функции в коде подписаны.
 
